If the parser scrapes up something it thinks is positionally a month, but is numerically out of range, do something reasonable instead of crashing. PR bin/39627.